--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ button {
   background: green;
   border-radius: 2em;
   transition: background-color 0.3s ease;
+  user-select: none;
 }
 
 button:active {
